# CringeLang

./: CMakeLists.txt  README.md
source/: CMakeLists.txt
source/arrrgh/: CMakeLists.txt  about.hpp.in  arrrgh.hpp
source/cringe/: CMakeLists.txt  about.hpp.in  deep_declaration_resolver.cpp  deep_declaration_resolver.hpp  diagnostics.cpp  diagnostics.hpp  global_declaration_resolver.cpp  global_declaration_resolver.hpp  parser.cpp  parser.hpp  scope_resolver.cpp  scope_resolver.hpp  session.hpp  types.cpp  types.hpp
source/cringe/ast/: explorer.hpp  nodes.cpp  nodes.hpp  probably.hpp  scopes.cpp  scopes.hpp  visitor.hpp
source/cringe/parsing/: parser.cpp  parser.hpp
source/cringe/resolution/: deep_declaration_resolver.cpp  deep_declaration_resolver.hpp  global_declaration_resolver.cpp  global_declaration_resolver.hpp  scope_resolver.cpp  scope_resolver.hpp
source/main/: CMakeLists.txt  main.cpp
source/orders/: CMakeLists.txt  about.hpp.in
source/orders/parsing/: diagnostics.cpp  diagnostics.hpp
source/orders/streams/: accumulator_stream.hpp  buffered_stream.hpp  stream.hpp
source/orders/streams/implementations/: analyzable_stream.cpp  analyzable_stream.hpp  simple_buffered_stream.cpp  simple_buffered_stream.hpp  simple_text_stream.cpp  simple_text_stream.hpp  std_stream.cpp  std_stream.hpp
source/orders/util/: printable.cpp  printable.hpp
source/threading/: CMakeLists.txt  about.hpp.in  thread_pool.cpp  thread_pool.hpp
tests/: test.py
tests/parsing/: simple_conditions.in  simple_conditions.out  simple_expression.in  simple_expression.out  simple_function.in  simple_function.out  simple_loops.in  simple_loops.out  simple_qualified_access.in  simple_qualified_access.out  simple_types.in  simple_types.out  simple_variables.in  simple_variables.out  trivial.in  trivial.out
